--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
 
     <button id="tas">Twist & Shout</button>
 
+
+    <!-- Form Events -->
+    <h1>Form Events</h1>
+
+    <form action="/dogs" id="tweetForm">
+        <input type="text" name="username" placeholder="username">
+        <input type="text" name="comment" placeholder="tweet">
+        <button>Post Tweet</button>
+    </form>
+
+    <h2>Tweets:</h2>
+    <ul id="tweets">
+
+    </ul>
+
+
+    <!-- Input & Change Event -->
+    <h1>Type Below:</h1>
+    <input type="text">
+
     <script src="app.js"></script>
 </body>
 
